editors/tree-sitter-wcl/grammar.js
    source_file: $ => repeat($._item),

    _item: $ => choice(
      $.namespace_decl,
      $.use_decl,
      $.import_decl,
      $.type_decl,
      $.interface_decl,
      $.union_decl,
      $.symbol_set_decl,
      $.connection_decl,
      $.connection,
      $.let_item,
      $.fn_item,
      $.slot_decl,
      $.table,
      $.block,
      $.field,
    ),

    _name: $ => choice(
      $.identifier,
      alias(choice(...ITEM_KEYWORDS), $.identifier),
    ),

    _decorators: $ => repeat1($.decorator),

    // ── Declarations ──────────────────────────────────────────────

    type_decl: $ => seq(
      optional($._decorators),
      'type',
      field('name', $.dotted_name),
      choice(
        seq(optional($.extends_clause), $.field_block),
        seq('=', field('alias', $._type)),
      ),
    ),

    field_block: $ => seq('{', repeat($.type_field), '}'),

    type_field: $ => seq(
      optional($._decorators),
      field('name', $.identifier),
      choice(
        seq(':', field('type', $._type), optional($.optional_marker)),
        seq('=', field('default', $._expression)),
      ),
    ),
    block: $ => seq(
      optional($._decorators),
      field('kind', choice($._name, $.qualified_kind)),
      optional($.optional_marker),
      repeat(field('label', $._label)),
      choice(field('body', $.block_body), $._block_end),
    ),
    _label: $ => choice(
      $.identifier,
      $.compound_identifier,
      $.string,
      $.interpolated_string,
      $.heredoc,
      $.number,
      $.boolean,
      $.symbol,
      $.none,
    ),
    // A bare label may run across `-` / `/` with no spaces:
    // `page getting-started/install`.
    field: $ => seq(
      optional($._decorators),
      field('name', choice($._name, $.string)),
      '=',
      field('value', $._expression),
    ),

    // ── Types ─────────────────────────────────────────────────────

    _type: $ => choice(
      $.reference_type,
      $._type_atom,
    ),
    reference_type: $ => seq('&', $._type_atom),
    _type_atom: $ => choice(
      $.function_type,
      $.named_type,
    ),
    named_type: $ => prec.right(seq(
      field('name', $.dotted_name),
      optional(field('arguments', $.type_arguments)),
    )),
    type_arguments: $ => seq(
      '<',
      commaSep1(choice($._type, $.tensor_dimensions)),
      optional(','),
      '>',
    ),
    tensor_dimensions: $ => seq(
      '[',
      commaSep1(choice($.number, $.identifier)),
      optional(','),
      ']',
    ),
    function_type: $ => prec.right(seq(
      'fn',
      '(',
      commaSep($._type),
      optional(','),
      ')',
      '->',
      field('return_type', $._type),
    )),

    // ── Expressions ───────────────────────────────────────────────

    _expression: $ => choice(
      $.number,
      $.string,
      $.interpolated_string,
      $.heredoc,
      $.boolean,
      $.none,
      $.symbol,
      $.identifier,
      $.parent,
      $.self,
      $.list,
      $.record,
      $.block_expression,
      $.parenthesized_expression,
      $.member_expression,
      $.call_expression,
      $.variant_expression,
      $.unary_expression,
      $.binary_expression,
      $.if_expression,
      $.match_expression,
      $.try_expression,
      $.function_expression,
    ),

    binary_expression: $ => choice(
      ...[
        ['??', PREC.coalesce],
        ['||', PREC.or],
        ['&&', PREC.and],
        ['==', PREC.eq], ['!=', PREC.eq],
        ['<', PREC.cmp], ['<=', PREC.cmp], ['>', PREC.cmp], ['>=', PREC.cmp],
        ['+', PREC.add], ['-', PREC.add],
        ['*', PREC.mul], ['/', PREC.mul], ['%', PREC.mul],
      ].map(([op, p]) => prec.left(p, seq(
        field('left', $._expression),
        field('operator', op),
        field('right', $._expression),
      ))),
    ),

    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      '{',
      repeat(seq($.match_arm, optional(','))),
      '}',
    ),
    match_arm: $ => prec.right(seq(
      field('pattern', $._pattern),
      repeat(seq('|', field('pattern', $._pattern))),
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('value', $._expression),
    )),

    // `try body catch e => handler` / `try { … } catch e { … }`.
    _pattern: $ => choice(
      $.wildcard_pattern,
      $.identifier,
      $.at_pattern,
      $.variant_pattern,
      $.number,
      $.string,
      $.boolean,
      $.none,
      $.symbol,
    ),
    wildcard_pattern: _ => '_',
    at_pattern: $ => seq(
      field('name', $.identifier),
      '@',
      field('pattern', $._pattern),
    ),
    variant_pattern: $ => prec.right(choice(
      seq(
        field('type', $.dotted_name),
        '::',
        field('variant', $.identifier),
        optional(field('arguments', $._variant_pattern_arguments)),
      ),
      seq(
        field('variant', $.identifier),
        field('arguments', $._variant_pattern_arguments),
      ),
    )),
    _variant_pattern_arguments: $ => choice(
      seq('(', $._pattern, ')'),
      $.record_pattern,
    ),
    record_pattern: $ => seq(
      '{',
      commaSep(choice($.record_pattern_field, $.rest_pattern)),
      optional(','),
      '}',
    ),
    record_pattern_field: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('pattern', $._pattern))),
    ),
    rest_pattern: _ => '..',

    // ── Literals ──────────────────────────────────────────────────

    // Digits with `_` separators in any base, an optional fraction and
    // exponent, then an optional suffix: a numeric type (`8080u16`) or a
    // literal unit (`5MiB`, `30s`). The lexer resolves which at
    // evaluation time; the suffix is part of the token either way.
    number: _ => token(seq(
      choice(
        /0[xX][0-9a-fA-F_]+/,
        /0[bB][01_]+/,
        /0[oO][0-7_]+/,
        /[0-9][0-9_]*(\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?)?/,
      ),
      optional(/[a-zA-Z][a-zA-Z0-9]*/),
    )),

    string: _ => token(seq(
      optional(choice(...ENCODINGS)),
      '"',
      repeat(choice(/[^"\\\n]/, /\\./)),
      '"',
    )),

    interpolated_string: $ => seq(
      alias(token(seq('$', optional(choice(...ENCODINGS)), '"')), '$"'),
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      token.immediate('"'),
    ),
    string_content: _ => token.immediate(prec(1, choice(/[^"\\$\n]+/, '$'))),
    escape_sequence: _ => token.immediate(prec(1, /\\./)),
    interpolation: $ => seq(
      token.immediate(prec(2, '${')),
      $._expression,
      '}',
    ),

    boolean: _ => choice('true', 'false'),
    none: _ => 'none',
    symbol: _ => token(seq(':', /[a-zA-Z_][a-zA-Z0-9_]*/)),

    // ── Identifiers ───────────────────────────────────────────────

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    dotted_name: $ => seq($.identifier, repeat(seq('.', $.identifier))),
  },
});

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
